fix: seed RAG knowledge and productize audit/trace UX for text classification tasks
Populate default Chinese knowledge on startup, improve retrieval and sentiment-specific audit output, and refresh publish/trace UI so task_text_cls_001 can be verified end-to-end online.

Co-authored-by: Cursor <cursoragent@cursor.com>